# FireMote-DEPRECATED

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build  build.pixel  firemote.js  include.d.ts  package.json  version.h  version.h.in
app/: index.html
app/css/: app.css  firemote.css
app/data/: status.json  statusLive.json
app/js/: app.js  controllers.js  directives.js  services.js
app/partials/: calibrate.html  camera.html  head.html  jog.html  move.html  spindle.html  status.html
client/js/: controllers.js
common/: tsc_watch.sh
common/js/: Axis.js  Head.js  MachineState.js  Part.js  Spindle.js
common/ts/: Axis.ts  Camera.ts  Coordinates.ts  DeltaFactory.ts  FireStep.ts  GCoder.ts  Gantry.ts  Head.ts  Interfaces.ts  LinearAxis.ts  MachineState.ts  Part.ts  PcbFeeder.ts  Rect.ts  Spindle.ts  TrayFeeder.ts
config/: karma.conf.js
scripts/: firemote.js  test.bat
server/: firemote.js
test/unit/: common.js
www/: index.html
www/css/: firemote.css
www/js/: Axis.js  Gantry.js  Head.js  MachineState.js  Part.js  PcbFeeder.js  Spindle.js  TrayFeeder.js  app.js  controllers.js  directives.js  filters.js  firemote.js  services.js
www/partials/: calibrate.html  camera-reticle.html  camera-settings.html  camera-vision.html  camera.html  configure.html  log.html  move.html  range.html  spindle.html  status.html
